--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,14 @@
   </properties>
 
   <dependencies>
+
+    <!-- jsoup HTML parser library @ https://jsoup.org/ -->
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.11.3</version>
+    </dependency>
+
 <!--    carcinus code-->
     <dependency>
       <groupId>carcinus.code</groupId>
@@ -84,12 +92,7 @@
       <artifactId>jackson-databind</artifactId>
       <version>2.12.5</version>
     </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter</artifactId>
-      <version>RELEASE</version>
-      <scope>test</scope>
-    </dependency>
+
   </dependencies>
 
   <build>
