--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,1 +1,4 @@
 auto.lottery.up.ids=652666095
+auto.lottery.email.user.name=qinliaoming@163.com
+auto.lottery.email.password=RMNTKHDEBHARAFOZ
+auto.lottery.email.send.to=qinliaoming@163.com
